--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,165 +2,64 @@
 
 file(GLOB_RECURSE TINY_USB_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/tinyusb/src/*.c)
 
-add_library(tinyusb_ria STATIC EXCLUDE_FROM_ALL)
-target_include_directories(tinyusb_ria PRIVATE
+add_library(tinyusb_ocula STATIC EXCLUDE_FROM_ALL)
+target_include_directories(tinyusb_ocula PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/tinyusb/src
-    ria
+    ocula
 )
-target_link_libraries(tinyusb_ria PUBLIC
+target_link_libraries(tinyusb_ocula PUBLIC
     pico_stdlib
 )
-target_sources(tinyusb_ria PRIVATE
-    ${TINY_USB_SRC_FILES}
-)
-
-add_library(tinyusb_vga STATIC EXCLUDE_FROM_ALL)
-target_include_directories(tinyusb_vga PRIVATE
-    ${CMAKE_CURRENT_LIST_DIR}/tinyusb/src
-    vga
-)
-target_link_libraries(tinyusb_vga PUBLIC
-    pico_stdlib
-)
-target_sources(tinyusb_vga PRIVATE
+target_sources(tinyusb_ocula PRIVATE
     ${TINY_USB_SRC_FILES}
 )
 
 
-# The Pi Pico RIA
+# The Oric OCULA
 
-add_executable(rp6502_ria)
-pico_add_extra_outputs(rp6502_ria)
-pico_set_program_name(rp6502_ria "RP6502 RIA")
-pico_set_binary_type(rp6502_ria copy_to_ram)
+add_executable(ocula)
+pico_add_extra_outputs(ocula)
+pico_set_program_name(ocula "Oric OCULA")
+pico_set_binary_type(ocula copy_to_ram)
+pico_set_linker_script(ocula ${CMAKE_CURRENT_LIST_DIR}/memmap_xram_rp2350.ld)
 
-target_include_directories(rp6502_ria PRIVATE
+target_include_directories(ocula PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
     ${CMAKE_CURRENT_LIST_DIR}/tinyusb/src
-    ria
+    ocula
 )
 
-target_compile_definitions(rp6502_ria PRIVATE
-    LFS_NO_MALLOC=1
-    LFS_NAME_MAX=16
+target_sources(ocula PRIVATE
+    ocula/main.c
+    ocula/modes/mode1.c
+    ocula/modes/mode2.c
+    ocula/modes/mode3.c
+    ocula/modes/mode4.c
+    ocula/modes/mode4.S
+    ocula/sys/std.c
+    ocula/sys/vga.c
+    ocula/term/color.c
+    ocula/term/font.c
+    ocula/term/term.c
+    ocula/usb/cdc.c
+    ocula/usb/descriptors.c
+    ocula/usb/serno.c
 )
 
-target_compile_options(rp6502_ria PRIVATE
-  -Wall -Wextra
-)
-
-target_link_libraries(rp6502_ria PRIVATE
-    pico_stdlib
-    pico_multicore
-    pico_rand
-    hardware_pio
-    hardware_dma
-    hardware_pwm
-    hardware_flash
-    hardware_rtc
-    tinyusb_ria
-)
-
-pico_generate_pio_header(rp6502_ria
-    ${CMAKE_CURRENT_LIST_DIR}/ria/sys/sys.pio
-)
-
-pico_generate_pio_header(rp6502_ria
-    ${CMAKE_CURRENT_LIST_DIR}/ria/sys/vga.pio
-)
-
-target_sources(rp6502_ria PRIVATE
-    ria/main.c
-    ria/str.c
-    ria/api/api.c
-    ria/api/clk.c
-    ria/api/oem.c
-    ria/api/rng.c
-    ria/api/std.c
-    ria/aud/aud.c
-    ria/aud/psg.c
-    ria/mon/fil.c
-    ria/mon/hlp.c
-    ria/mon/mon.c
-    ria/mon/ram.c
-    ria/mon/rom.c
-    ria/mon/set.c
-    ria/mon/vip.c
-    ria/sys/cfg.c
-    ria/sys/com.c
-    ria/sys/cpu.c
-    ria/sys/led.c
-    ria/sys/lfs.c
-    ria/sys/mem.c
-    ria/sys/pix.c
-    ria/sys/ria.c
-    ria/sys/sys.c
-    ria/sys/vga.c
-    ria/usb/hid.c
-    ria/usb/kbd.c
-    ria/usb/mou.c
-    ria/usb/msc.c
-    ria/usb/pad.c
-    ria/usb/usb.c
-    fatfs/ff.c
-    fatfs/ffunicode.c
-    littlefs/lfs.c
-    littlefs/lfs_util.c
-)
-
-
-# The Pi Pico VGA
-
-add_executable(rp6502_vga)
-pico_add_extra_outputs(rp6502_vga)
-pico_set_program_name(rp6502_vga "RP6502 VGA")
-pico_set_binary_type(rp6502_vga copy_to_ram)
-pico_set_linker_script(rp6502_vga ${CMAKE_CURRENT_LIST_DIR}/memmap_xram.ld)
-
-target_include_directories(rp6502_vga PRIVATE
-    ${CMAKE_CURRENT_LIST_DIR}
-    ${CMAKE_CURRENT_LIST_DIR}/tinyusb/src
-    vga
-)
-
-target_sources(rp6502_vga PRIVATE
-    vga/main.c
-    vga/modes/mode1.c
-    vga/modes/mode2.c
-    vga/modes/mode3.c
-    vga/modes/mode4.c
-    vga/modes/mode4.S
-    vga/sys/led.c
-    vga/sys/pix.c
-    vga/sys/ria.c
-    vga/sys/std.c
-    vga/sys/vga.c
-    vga/term/color.c
-    vga/term/font.c
-    vga/term/term.c
-    vga/usb/cdc.c
-    vga/usb/descriptors.c
-    vga/usb/serno.c
-)
-
-target_link_libraries(rp6502_vga PRIVATE
+target_link_libraries(ocula PRIVATE
     pico_stdlib
     pico_multicore
     pico_unique_id
     pico_scanvideo_dpi
     hardware_interp
-    tinyusb_vga
+    tinyusb_ocula
 )
 
-pico_generate_pio_header(rp6502_vga
-    ${CMAKE_CURRENT_LIST_DIR}/vga/sys/pix.pio
-)
+#pico_generate_pio_header(ocula
+#    ${CMAKE_CURRENT_LIST_DIR}/vga/sys/ocula.pio
+#)
 
-pico_generate_pio_header(rp6502_vga
-    ${CMAKE_CURRENT_LIST_DIR}/vga/sys/ria.pio
-)
-
-target_compile_definitions(rp6502_vga PRIVATE
+target_compile_definitions(ocula PRIVATE
     PICO_SCANVIDEO_PLANE_COUNT=3
     PICO_SCANVIDEO_MAX_SCANLINE_BUFFER_WORDS=323
     PICO_SCANVIDEO_SCANLINE_BUFFER_COUNT=10
@@ -175,30 +74,22 @@ target_compile_definitions(rp6502_vga PRIVATE
 # Please change name for hardware forks.
 # For release, set version string and set code page to 0.
 
-set_property(TARGET rp6502_ria rp6502_vga
+set_property(TARGET ocula
     APPEND PROPERTY COMPILE_DEFINITIONS
-    RP6502_NAME="Picocomputer 6502"
+    RP6502_NAME="Oric OCULA"
     RP6502_VERSION=""
     RP6502_CODE_PAGE=850
     RP6502_KEYBOARD=EN_US
     RP6502_MIN_PHI2=500
     RP6502_MAX_PHI2=8000
-    RP6502_EXFAT=0
 )
 
 
 # If no version set, touch the file that provides a dev timestamp for the version.
 
-get_target_property(RP6502_RIA_COMPILE_DEFINITIONS rp6502_ria COMPILE_DEFINITIONS)
-if(RP6502_RIA_COMPILE_DEFINITIONS MATCHES "RP6502_VERSION=\"\"")
-    add_custom_command(TARGET rp6502_ria
-        COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_CURRENT_LIST_DIR}/ria/sys/sys.c
-    )
-endif()
-
-get_target_property(RP6502_VGA_COMPILE_DEFINITIONS rp6502_vga COMPILE_DEFINITIONS)
+get_target_property(RP6502_VGA_COMPILE_DEFINITIONS ocula COMPILE_DEFINITIONS)
 if(RP6502_VGA_COMPILE_DEFINITIONS MATCHES "RP6502_VERSION=\"\"")
-    add_custom_command(TARGET rp6502_vga
-        COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_CURRENT_LIST_DIR}/vga/sys/ria.c
+    add_custom_command(TARGET ocula
+        COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_CURRENT_LIST_DIR}/ocula/main.c
     )
 endif()
