--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -119,6 +119,7 @@ target_sources(pivic PRIVATE
     firmware/mon/ram.c
     firmware/mon/set.c
     firmware/mon/vip.c
+    firmware/vic/vic.c
     firmware/sys/cfg.c
     firmware/sys/com.c
     firmware/sys/cpu.c
@@ -156,6 +157,7 @@ target_link_libraries(pivic PRIVATE
 
 pico_generate_pio_header(pivic
     ${CMAKE_CURRENT_LIST_DIR}/firmware/vic/cvbs.pio
+    ${CMAKE_CURRENT_LIST_DIR}/firmware/vic/vic.pio
 )
 
 target_compile_definitions(pivic PRIVATE
