--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -121,6 +121,7 @@ target_sources(pivic PRIVATE
     firmware/mon/set.c
     firmware/mon/vip.c
     firmware/vic/aud.c
+    firmware/vic/mem.c
     firmware/vic/vic.c
     firmware/sys/cfg.c
     firmware/sys/com.c
@@ -160,6 +161,7 @@ target_link_libraries(pivic PRIVATE
 pico_generate_pio_header(pivic
     ${CMAKE_CURRENT_LIST_DIR}/firmware/vic/cvbs.pio
     ${CMAKE_CURRENT_LIST_DIR}/firmware/vic/vic.pio
+    ${CMAKE_CURRENT_LIST_DIR}/firmware/vic/mem.pio
 )
 
 target_compile_definitions(pivic PRIVATE
