Add HW revision detection and pins configuration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,6 +136,7 @@ target_sources(pivic PRIVATE
     firmware/sys/dvi.c
     firmware/sys/lfs.c
     firmware/sys/mem.c
+    firmware/sys/rev.c
     firmware/sys/sys.c
 #    firmware/sys/vga.c
     firmware/term/color.c
